# cmdp

./: .cliactions.yaml  .coveragerc  .dockerignore  .env  .gitignore  .pycrunch-config.yaml  .readthedocs.yml  Dockerfile  Makefile  README.md  pyproject.toml  pyproject2.toml  pytest.ini  ruff.toml  settings.ini  setup.cfg  tests.dockerfile  tox.ini
.github/workflows/: main.yml
_backup/: __init__.py  original.py
_backup/tests/: test_cli_commands.py
backup/: setup.cfg
backup/.github/workflows/: build_release.yml
backup/puntos/: cli.py  jetbrains.py  unlink.py
backup/setuid/: README.md  __init__.py  __init__.pyi  demo.py  demo_linux.py  seteuid.py
docker/: Dockerfile  deps.dockerfile  docker.sh  tests.dockerfile
docs/: conf.py  reference.md  usage.md
scratch/color_logger/: __init__.py
scratch/nodeps/: __init__.py
scratch/pt/: __init__.py
scratch/pth/: __init__.py
src/_backup/: __init__.py  __main__.py
src/_backup/tests/: test_giturl_parse.py  test_giturl_rewrite.py  test_path_pickle_class.py
src/cmdp/: __init__.py
src/nodeps/: __init__.py  __main__.py
src/nodeps/extras/: __init__.py  pretty.py  pth.py  repo.py  repo.pyi
src/nodeps/extras/_pretty/: __init__.py
src/nodeps/extras/_repo/: __init__.py
src/nodeps/extras/_url/: __init__.py
src/nodeps/fixtures/: __init__.py
src/nodeps/ipython/: __init__.py
src/nodeps/ipython/profile_default/: ipython_config.py
src/nodeps/ipython_dir/profile_default/: ipython_config.py  ipython_pycharm_startup.py
src/nodeps/ipython_dir/profile_default/startup/: import_all.py
src/nodeps/ipython_profile/backup/: ipython_config_simple.py
src/nodeps/ipython_profile/profile_default/: history.sqlite  ipython_config.py
src/nodeps/ipython_variables/: __init__.py  _pydev.py
src/nodeps/modules/: __init__.py  classes.py  constants.py  datas.py  enums.py  errors.py  functions.py  gh.py  ipython.py  metapath.py  path.py  path.pyi  project.py  typings.py
src/nodeps/python_startup/: __init__.py
src/nodeps/setup/: __init__.py
tests/: conftest.py  env.bash  env.sh  prueba.py  test_aioclone.py  test_cli_app.py  test_cli_commands.py  test_cli_g.py  test_cli_gh_g.py  test_cli_project.py  test_cli_project_p.py  test_constants_and_paths.py  test_docker.py  test_envbash.py  test_envsh.py  test_fixture.py  test_fixture_repos.py  test_gh.py  test_gh_status.py  test_giturl_parse.py  test_giturl_rewrite.py  test_import.py  test_install.py  test_path_pickle_class.py  test_pipmetapathfinder.py
