[project]
name = "nodeps"
description = "Python helpers and utilities with no dependencies"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
ansi = [
    "strip-ansi >=0.1.1, <1",
]
dev = [
    "pproj[all]",
]
echo = [
    "typer[all] >= 0.9, <1",
]
log = [
    "loguru >=0.7.2, <1",
]
pickle = [
    "jsonpickle >= 3.0.2, <4",
    "structlog >=23.1.0, <24",
]
pretty = [
    "rich >=13.6.0, <14",
]
pth = [
    "setuptools >= 68.2.2, <69",
]
repo = [
    "gitpython >=3.1.37, <4",
]
requests = [
    "beautifulsoup4 >= 4.12.2, <5",
    "requests >= 2.31.0, <3",
]
all = [
    "nodeps[ansi]",
    "nodeps[echo]",
    "nodeps[log]",
    "nodeps[pickle]",
    "nodeps[pretty]",
    "nodeps[pth]",
    "nodeps[repo]",
    "nodeps[requests]",
]

[[project.authors]]
name = "José Antonio Puértolas Montañés"
email = "63794670+j5pu@users.noreply.github.com"

[project.urls]
Homepage = "https://github.com/j5pu/nodeps"

[project.license]
text = "MIT"
[build-system]
requires = [
    "nodeps",
    "setuptools >= 68.2.2, <69",
    "setuptools_scm >= 8.0.3, <9",
    "wheel >= 0.41.2, <1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
