[project]
classifiers = [
    "Framework :: Pytest",
]
description = "Python helpers and utilities with no dependencies"
dynamic = ["version"]
name = "nodeps"
readme = "README.md"
requires-python = ">=3.11"
[[project.authors]]
name = "José Antonio Puértolas Montañés"
email = "63794670+j5pu@users.noreply.github.com"







[project.entry-points.pytest11]
git-pytest = "nodeps.fixtures"





[project.license]
text = "MIT"

[project.optional-dependencies]
ansi = [
    "strip-ansi >=0.1.1, <1",
]
cli = [
    "tomlkit >= 0.12.1, <1",
    "typer[all] >= 0.9, <1",
]
dev = [
    "black[d] >=23.9.1, <24; python_version < '3.12'", # pipx
    "build >=1.0.3, <2",
    "hunter >= 3.6.1, <4",
    "icecream >=2.1.3, <3",
    "ipython >=8.16.0, <9", # pipx
    "rich >=13.6.0, <14",
    "twine >=4.0.2, <5", # pipx
    "tomlkit >= 0.12.1, <1",
    "docrepr >= 0.2.0, <1",
    "docutils", # pipx
    "furo >=2023.9.10, <2024",
    "myst-parser >=2.0.0, <3",
    "sphinx >=7.2.6, <8", # pipx
    "sphinx-autodoc-typehints",
    "sphinx-autobuild >=2021.3.14, <2022",
    "sphinx-click >=5.0.1, <6",
    "sphinxcontrib-napoleon >=0.7, <1",
    "coverage[toml] >=7.3.2, <8", # pipx
    "docker >=6.1.3, <7",
    "darglint >=1.8.1, <2", # pipx
    "environs >=9.5.0, <10",
    "pycodestyle >= 2.11.0, <3", # pipx
    "pydocstyle >=6.3, <7", # pipx
    "pytest >=7, <8", # pipx
    "pytest-asyncio >=0.21.1, <1",
    "pytest-clarity >=1.0.1, <2",
    "pytest-cov >=4, <5",
    "pytest-github-actions-annotate-failures >=0.2.0, <1",
    "pytest-mock >=3, <4",
    "pytest-xdist >=2, <3",
    "pytest-remotedata >=0.4.0, <1",
    "pytest-lazy-fixture ~=0.6.3",
    "pytest-sugar >=0.9.7, <1",
    "responses >=0.21.0, <1",
    "requests-mock >=1.10.0, <2",
    "ruff >=0.0.282, <0.1", # pipx
    "ruff-lsp >=0.0.39, <0.1", # pipx
    "tox >=4.6.4, <5", # pipx
    "types-pytest-lazy-fixture >=0.6.3.3",
]
echo = [
    "typer[all] >= 0.9, <1",
]
env = [
    "python-decouple >=3.8, <4",
]
log = [
    "loguru >=0.7.2, <1",
]
pickle = [
    "jsonpickle >= 3.0.2, <4",
    "structlog >=23.1.0, <24",
]
pretty = [
    "rich >=13.6.0, <14",
]
pth = [
    "setuptools >= 68.2.2, <69",
]
repo = [
    "gitpython >=3.1.37, <4",
]
requests = [
    "beautifulsoup4 >= 4.12.2, <5",
    "requests >= 2.31.0, <3",
]
all = [
    "nodeps[ansi]",
    "nodeps[cli]",
    "nodeps[echo]",
    "nodeps[env]",
    "nodeps[log]",
    "nodeps[pickle]",
    "nodeps[pretty]",
    "nodeps[pth]",
    "nodeps[repo]",
    "nodeps[requests]",
]
full = [
    "nodeps[all]",
    "nodeps[dev]",
]

[project.scripts]
g = "nodeps.__main__:gh_g"
p = "nodeps.__main__:project_p"
branch = "nodeps.__main__:_branch"
browser = "nodeps.__main__:_browser"
build = "nodeps.__main__:_build"
builds = "nodeps.__main__:_builds"
buildrequires = "nodeps.__main__:_buildrequires"
clean = "nodeps.__main__:_clean"
commit = "nodeps.__main__:_commit"
completions = "nodeps.__main__:_completions"
current = "nodeps.__main__:_current"
dependencies = "nodeps.__main__:_dependencies"
dirty = "nodeps.__main__:_dirty"
distribution = "nodeps.__main__:_distribution"
diverge = "nodeps.__main__:_diverge"
docs = "nodeps.__main__:_docs"
extras = "nodeps.__main__:_extras"
ipythondir = "nodeps.__main__:_ipythondir"
latest = "nodeps.__main__:_latest"
mip = "nodeps.__main__:_mip"
needpull = "nodeps.__main__:_needpull"
needpush = "nodeps.__main__:_needpush"
next = "nodeps.__main__:_next"
publish = "nodeps.__main__:_publish"
pull = "nodeps.__main__:_pull"
push = "nodeps.__main__:_push"
pypi = "nodeps.__main__:_pypi"
pytests = "nodeps.__main__:_pytests"
pythonstartup = "nodeps.__main__:_pythonstartup"
remote = "nodeps.__main__:_remote"
repos = "nodeps.__main__:_repos"
requirement = "nodeps.__main__:_requirement"
requirements = "nodeps.__main__:_requirements"
secrets = "nodeps.__main__:_secrets"
secrets-names = "nodeps.__main__:_secrets_names"
_status = "nodeps.__main__:_status"
superproject = "nodeps.__main__:_superproject"
tests = "nodeps.__main__:_tests"
version = "nodeps.__main__:_version"
venv = "nodeps.__main__:_venv"
venvs = "nodeps.__main__:_venvs"

[project.urls]
Homepage = "https://github.com/j5pu/nodeps"
Documentation = "https://nodeps.readthedocs.io"







[build-system]
requires = [
    "nodeps",
    "setuptools >= 68.2.2, <69",
    "setuptools_scm >= 8.0.3, <9",
    "wheel >= 0.41.2, <1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
