[global]
quiet = 1
verbose = 0
show_warnings = false

[egg_info]
egg_base = /tmp

[options]
cmdclass =
  build_py = nodeps.PTHBuildPy
  develop = nodeps.PTHDevelop
  easy_install = nodeps.PTHEasyInstall
  install_lib = nodeps.PTHInstallLib
include_package_data = True
packages = find:
package_dir =
  = src
scripts =
  bin/git-mod-add
  bin/git-mod-clean
  bin/git-mod-rm

[options.entry_points]
pytest11 =
    git-pytest = nodeps.fixtures

[options.packages.find]
where = src

[options.package_data]
nodeps =
  *.pth
nodeps.data =
  *
nodeps.fixtures =
  *.sh
  gitconfig
