[options]
scripts =
  bin/git-branch-default-update
  bin/git-can-admin
  bin/git-mod-add
  bin/git-mod-clean
  bin/git-mod-rm
  bin/git-owner-update
  bin/git-projects-push
  bin/git-repo-names
  bin/git-repo-names-archived
  bin/git-repo-names-no-archived
  bin/git-repo-names-private
  bin/git-submodule-defaults
  bin/git-submodule-delete
  bin/git-submodule-paths
  bin/git-submodule-pull
  bin/git-submodule-pull-update
  bin/git-submodule-track
  bin/git-submodule-urls
  bin/git-submodule-urls-update
  bin/git-tops
  bin/git-tops-can-admin
  bin/git-tops-push
  bin/git-transfer
cmdclass =
  build_py = nodeps.BuildPy
  develop = nodeps.Develop
  easy_install = nodeps.EasyInstall
  install_lib = nodeps.InstallLib
package_dir =
  = src
include_package_data = True
packages = find:

[options.package_data]
nodeps =
  *.pth
nodeps.data =
  *

[global]
quiet = 1
verbose = 0
show_warnings = false

[egg_info]
egg_base = /tmp

[options.packages.find]
where = src

